<resources>
    <string name="app_name">*Encrypted Video Publish</string>

    <!-- Login & Register Activity -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_invalid_password">密码长度太短，至少需要6个字符</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_username_required">请输入用户名</string>
    <string name="action_register">注册新用户</string>
    <string name="action_register_short">注册</string>
    <string name="error_invalid_name">用户名重名，请换用其他名称</string>
    <string name="info_register_success">注册成功，请登录</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_exit">退出</string>
    <string name="mainmenu_group_video">视频</string>
    <string name="mainmenu_group_follower">关注</string>
    <string name="mainmenu_group_personal">个人</string>
    <string name="mainmenu_changepswd">修改密码</string>
    <string name="mainmenu_logout">注销登录</string>
    <string name="mainmenu_follower">我的粉丝</string>
    <string name="mainmenu_approve">待确认关注请求</string>
    <string name="mainmenu_live">发起直播</string>
    <string name="mainmenu_upload">上传视频</string>
    <string name="info_network_error">网络错误，请稍后再试</string>
    <string name="info_logout_progress">注销中，请稍等……</string>
    <string name="info_requirelist_progress">处理中，请稍等……</string>
    <string name="title_activity_settings">设置</string>

    <string-array name="pref_video_resolution">
        <item>1920x1080</item>
        <item>1280x720</item>
        <item>854x480</item>
        <item>640x360</item>
    </string-array>
    <string name="title_activity_create_vod">上传视频</string>
</resources>
